tests/fixtures/invalid/chr_3_args.py
# chr() takes at most 1 argument, got 3
x = chr(1, 1, 1)
